sentry/deployment-sentry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-web
  namespace: sentry
  labels:
    app: sentry-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentry-web
  template:
    metadata:
      labels:
        app: sentry-web
    spec:
      containers:
        - name: sentry-web
          image: sentry:9.0-onbuild
          ports:
            - containerPort: 9000
              name: web
          resources:
            limits:
              memory: '128Mi'
              cpu: '100m'
            requests:
              memory: '128Mi'
              cpu: '100m'
          volumeMounts:
            - mountPath: '/var/lib/sentry/files'
              name: sentry-data

      volumes:
        - name: sentry-data
          persistentVolumeClaim:
            claimName: sentry-data

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-cron
  namespace: sentry
  labels:
    app: sentry-cron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentry-cron
  template:
    metadata:
      labels:
        app: sentry-cron
    spec:
      containers:
        - name: sentry-cron
          image: sentry:9.0-onbuild
          command: ['/entrypoint.sh']
          args: ['run', 'cron']
          resources:
            limits:
              memory: '64Mi'
              cpu: '50m'
            requests:
              memory: '64Mi'
              cpu: '50m'
          volumeMounts:
            - mountPath: '/var/lib/sentry/files'
              name: sentry-data

      volumes:
        - name: sentry-data
          persistentVolumeClaim:
            claimName: sentry-data

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-worker
  namespace: sentry
  labels:
    app: sentry-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentry-worker
  template:
    metadata:
      labels:
        app: sentry-worker
    spec:
      containers:
        - name: sentry-worker
          image: sentry:9.0-onbuild
          command: ['/entrypoint.sh']
          args: ['run', 'worker']
          resources:
            limits:
              memory: '64Mi'
              cpu: '50m'
            requests:
              memory: '64Mi'
              cpu: '50m'
          volumeMounts:
            - mountPath: '/var/lib/sentry/files'
              name: sentry-data

      volumes:
        - name: sentry-data
          persistentVolumeClaim:
            claimName: sentry-data
