sentry/service-memcached.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry-memcached
  namespace: sentry
  labels:
    app: sentry-memcached
spec:
  type: ClusterIP
  ports:
    - port: 11211
      targetPort: memcached
      name: memcached
  selector:
    app: sentry-memcached
