sentry/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry-redis
  namespace: sentry
  labels:
    app: sentry-redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: redis
      name: redis
  selector:
    app: sentry-redis
